Add Texts to Agenda
Adding Description for a longer markdown description
Adding Short for a short status text seen on the agenda start page

--- a/app/views/admin/agendas/new.html.erb
+++ b/app/views/admin/agendas/new.html.erb
@@ -2,5 +2,10 @@
   <div class="headline">
     <h1><%= t('agenda.new') %></h1>
   </div>
+
   <%= render 'form' %>
+
+  <hr>
+
+  <%= link_to t('agenda.admin'), admin_agendas_path, class: 'btn secondary' %>
 </div>
