--- a/app/views/admin/agendas/_form.html.erb
+++ b/app/views/admin/agendas/_form.html.erb
@@ -3,10 +3,14 @@
   <%= f.input :index, as: :integer, input_html: { min: '1'} %>
   <%= f.input :status, collection: agenda_status_collection,
                        input_html: { class: 'select2' }, include_blank: false %>
-  <%= f.input :parent_id, collection: Agenda.all, include_hidden: false,
+  <%= f.association :parent, collection: Agenda.index, label_method: :to_s, include_hidden: false,
                 input_html: { class: 'select2' }, required: false %>
-  <div class="table">
-    <%= f.button :submit, class: 'btn primary' %>
-    <%= link_to 'Administrera dagordningen', admin_agendas_path, class: 'btn secondary' %>
-  </div>
+  <%= f.input :short, hint: t('agenda.hint.short') %>
+  <%= f.input :description, as: :pagedown, input_html: { preview: true, rows: 10 },
+                            hint: t('agenda.hint.description') %>
+  <%= f.button :submit %>
+  <% if @agenda.persisted? %>
+    <%= link_to t('agenda.destroy'), admin_agenda_path(@agenda), method: :delete,
+                                                                 class: 'btn danger pull-right' %>
+  <% end %>
 <% end %>
