--- a/app/views/admin/adjustments/_form.html.erb
+++ b/app/views/admin/adjustments/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for [:admin, @adjustment] do |f| %>
-  <%= f.input :agenda_id, collection: Agenda.all, include_hidden: false,
-                include_blank: false, input_html: { class: 'select2' } %>
+  <%= f.association :agenda, collection: Agenda.index, label_method: :to_s, include_hidden: false,
+                             include_blank: false, input_html: { class: 'select2' } %>
   <%= f.input :presence, include_blank: false, collection: adjustment_collection %>
   <%= f.hidden_field :user_id, value: @adjustment.user_id %>
   <div class="table">
