--- a/app/views/agendas/show.html.erb
+++ b/app/views/agendas/show.html.erb
@@ -32,7 +32,7 @@
       <h4><%= t('agenda.children') %></h4>
     </div>
     <ul class="list">
-      <% @agenda.children.each do |agenda| %>
+      <% @agenda.children.index.each do |agenda| %>
         <li><%= link_to(agenda, agenda_path(agenda)) %></li>
       <% end %>
     </ul>
@@ -49,7 +49,7 @@
     <h1>
       <%= @agenda.to_s %>
       <small>
-        <%= agenda_status_str(@agenda.status) %> <%= @agenda.short %>
+        <%= agenda_status_str(@agenda.status) %>
       </small>
     </h1>
   </div>
