--- a/app/views/admin/vote_users/index.html.erb
+++ b/app/views/admin/vote_users/index.html.erb
@@ -28,7 +28,7 @@
     grid.row_attributes do |user|
       {id: dom_id(user), class: user.presence ? 'present' : 'not-present'}
     end
-    grid.column name: t('attributes.name'), attribute: 'firstname' do |user|
+    grid.column name: t('attributes.name'), attribute: 'firstname', html: {class: 'name'} do |user|
       link_to admin_print_user(user), admin_vote_user_path(user)
     end
     grid.column name: User.human_attribute_name(:presence), attribute: 'presence', 
