--- a/app/views/admin/vote_users/index.html.erb
+++ b/app/views/admin/vote_users/index.html.erb
@@ -38,7 +38,8 @@
     grid.column name: t('vote_user.change_state'), html: {class: 'adjust'} do |user|
       vote_user_state_link(user)
     end
-    grid.column name: t('vote_user.reset_votecode'), html: {class: 'votecode-reset'} do |user|
+    grid.column name: t('vote_user.reset_votecode'), attribute: 'votecode',
+                html: {class: 'votecode-reset'} do |user|
       link_to t('vote_user.reset'), new_votecode_admin_vote_user_path(user),
                 method: :patch, remote: true,  data: {confirm: t('vote_user.confirm_reset')}
     end
