Admin permissions: update from can_administrate
- Adds edit link to documents

Issue #112

--- a/app/views/admin/adjustments/index.html.erb
+++ b/app/views/admin/adjustments/index.html.erb
@@ -4,15 +4,15 @@
 </div>
 
 <div class="col-md-3 col-sm-12">
-  <% if can? :manage_voting, User %>
+  <% if can_administrate? :manage_voting, User %>
     <%= link_to t('vote_user.attendance_list'), attendance_list_admin_vote_users_path,
                 class: 'btn primary' %>
     <%= link_to t('vote_user.manage'), admin_vote_users_path, class: 'btn secondary' %>
   <% end %>
-  <% if can? :manage, Vote %>
+  <% if can_administrate? :manage, Vote %>
     <%= link_to t('vote.manage'), admin_votes_path, class: 'btn secondary' %>
   <% end %>
-  <% if can? :manage, Agenda %>
+  <% if can_administrate? :manage, Agenda %>
     <%= link_to t('agenda.manage'), admin_agendas_path, class: 'btn secondary' %>
   <% end %>
 </div>
