--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -22,7 +22,7 @@
     <% end %>
   </span>
 
-  <% if can?(:manage, @news) %>
+  <% if can_administrate?(:manage, @news) %>
     <span class="edit">
       <%= link_to(edit_admin_news_path(@news)) do %>
         <%= fa_icon('cog') %> <%= t(:edit) %>
