--- a/app/views/layouts/_copyright.html.erb
+++ b/app/views/layouts/_copyright.html.erb
@@ -1,4 +1,4 @@
-<div class="row copyright" id="copyright">
+<div class="row copyright">
   <p>
     <%= t('footer.developed_at') %>
     <%= link_to('https://fsektionen.se') do %>
