Blank votes and simple majority
* Allows blank vote posts to be created
* Simple majority is now used instead of qualified majority
* Some useful information for adjusters is added
* Non-working links from admin/vote_user#show are removed

--- a/app/views/admin/agendas/index.html.erb
+++ b/app/views/admin/agendas/index.html.erb
@@ -13,11 +13,7 @@
 <div class="col-md-12">
   <%= grid(@agenda_grid, class: 'agenda-grid') do |grid|
     grid.row_attributes do |a|
-      if a.current?
-        {id: dom_id(a), class: 'current'}
-      else
-        {id: dom_id(a)}
-      end
+      {id: dom_id(a), class: a.current ? 'highlight' : 'no-highlight'}
     end
     grid.column name: Agenda.human_attribute_name(:index), attribute: 'sort_index' do |a|
       link_to a, edit_admin_agenda_path(a)
