--- a/app/views/admin/agendas/set_closed.js.erb
+++ b/app/views/admin/agendas/set_closed.js.erb
@@ -1,6 +1,6 @@
 <% if @success %>
   $('tr#<%= dom_id(@agenda) %> td.state').html('<%= j agenda_current_link(@agenda) %>');
-  $('tr#<%= dom_id(@agenda) %>').removeClass('current');
+  $('tr#<%= dom_id(@agenda) %>').removeClass('highlight');
   $('tr#<%= dom_id(@agenda) %> td.status').html('<%= j agenda_status_str(@agenda.status) %>');
 <% else %>
   $('tr#<%= dom_id(@agenda) %> td.state').html('<%= j agenda_close_link(@agenda) %>');
