--- a/app/views/admin/vote_users/not_present.js.erb
+++ b/app/views/admin/vote_users/not_present.js.erb
@@ -1,7 +1,7 @@
 $('tr#<%= dom_id(@user) %> td.adjust').html('<%= j vote_user_state_link(@user) %>');
 
 <% if @success %>
-  $('tr#<%= dom_id(@user) %>').removeClass('present');
+  $('tr#<%= dom_id(@user) %>').removeClass('highlight');
   $('tr#<%= dom_id(@user) %> td.presence').html('<%= j yes_no(@user.presence) %>');
 <% else %>
   $('tr#<%= dom_id(@user) %> td.adjust').append('<br><%= t('vote_user.state.short_error_not_present') %>');
