--- a/app/assets/stylesheets/partials/_cookies.scss
+++ b/app/assets/stylesheets/partials/_cookies.scss
@@ -4,9 +4,9 @@
 
     .cookies-eu-button-holder {
       .cookies-eu-ok {
-        background-color: $fsek-orange;
+        background-color: $main-color;
         background-image: none;
-        border: 1px solid $fsek-orange;
+        border: 1px solid $main-color;
       }
     }
   }
