--- a/app/assets/stylesheets/partials/_votes.scss
+++ b/app/assets/stylesheets/partials/_votes.scss
@@ -18,7 +18,7 @@
     }
 
     .large {
-      color: $fsek-orange;
+      color: $main-color;
       display: block;
       font-size: 50px;
     }
@@ -46,7 +46,7 @@
     text-align: center;
 
     i {
-      color: $fsek-orange;
+      color: $main-color;
       font-size: 20px;
     }
   }
