--- a/app/assets/stylesheets/style/accordion.scss
+++ b/app/assets/stylesheets/style/accordion.scss
@@ -14,7 +14,7 @@
         margin-right: 8px;
 
         &:hover {
-          color: $unify-orange-hover;
+          color: $main-color-hover;
         }
       }
     }
