--- a/app/assets/stylesheets/style/blog.scss
+++ b/app/assets/stylesheets/style/blog.scss
@@ -121,7 +121,7 @@ ul {
       border-top-color: $unify-orange;
 
       &:after {
-        border-top-color: $fsek-orange;
+        border-top-color: $main-color;
       }
     }
 
