--- a/app/assets/stylesheets/style/pagination.scss
+++ b/app/assets/stylesheets/style/pagination.scss
@@ -10,7 +10,7 @@
 
     a:hover {
       background-color: $fsek-pi-silver;
-      border-color: $fsek-orange;
+      border-color: $main-color;
     }
   }
 
