--- a/app/assets/stylesheets/style/panel.scss
+++ b/app/assets/stylesheets/style/panel.scss
@@ -67,6 +67,15 @@
   }
 }
 
+.panel-main {
+  border-color: $main-color;
+
+  > .panel-heading {
+    background: $main-color;
+    color: $gray-headline;
+  }
+}
+
 .panel-green {
   border-color: $unify-green;
 
