--- a/app/assets/stylesheets/style/search-blocks.scss
+++ b/app/assets/stylesheets/style/search-blocks.scss
@@ -22,11 +22,11 @@
 
 .search-blocks-top-orange {
   background: none;
-  border-top: 1px solid $fsek-orange;
+  border-top: 1px solid $main-color;
   padding-top: 15px;
 }
 
 .blocks-top-orange {
   background: none;
-  border-top: 1px solid $fsek-orange;
+  border-top: 1px solid $main-color;
 }
