--- a/app/assets/stylesheets/style/service.scss
+++ b/app/assets/stylesheets/style/service.scss
@@ -25,7 +25,7 @@
 
   .service-icon {
     @include transition(all 0.4s ease-in-out);
-    color: $fsek-orange;
+    color: $main-color;
     float: left;
     font-size: 45px;
     padding: 10;
