--- a/app/assets/stylesheets/style/tag-box.scss
+++ b/app/assets/stylesheets/style/tag-box.scss
@@ -14,7 +14,7 @@
 
 .tag-box-v1 {
   border: solid 1px $light-gray-text;
-  border-top: solid 2px $fsek-orange;
+  border-top: solid 2px $main-color;
 }
 
 .tag-box-v2 {
