--- a/app/views/admin/adjustments/index.html.erb
+++ b/app/views/admin/adjustments/index.html.erb
@@ -32,7 +32,7 @@
   <p id=adjustment-status>
   </p>
 
-  <div class="panel panel-orange">
+  <div class="panel panel-main">
     <table class=table>
       <thead id="adjustment-thead">
       </thead>
