--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,8 +9,8 @@
           <span class="icon-bar"></span>
         </button>
         <%= link_to root_path do %>
-          <div class="navbar-brand">
-            <%= image_tag("layout/f.svg", id: "logo-header", height: "60") %>
+          <div class="navbar-brand lth">
+            <%= Settings.start.logo %>
           </div>
           <div class="navbar-brand-text pull-left">
             <span>&mdash;</span>RÖSTSYSTEM
