--- a/app/assets/stylesheets/colors.scss.erb
+++ b/app/assets/stylesheets/colors.scss.erb
@@ -1,6 +1,10 @@
 // See http://sachagreif.com/sass-color-variables
 
 // Color definitions
+$main-color: <%= Settings.css.main_color %>;
+$main-color-hover: <%= Settings.css.hover_color %>;
+$highlight-color: <%= Settings.css.highlight_color %>;
+
 $fsek-orange: #eb7125;
 $fsek-orange-hover: #eb7125;
 $fsek-nano-green: #4e9d2d;
@@ -16,19 +20,14 @@ $link-hover-color: #f82805;
 $light-gray: #fcfcfc;
 $footer-gray: #333;
 
-
 $highlight: 0 1px 0 $white;
-$orange-highlight: rgba(252, 152, 0, 0.5);
 $green-highlight: #00b819;
 
 // Function definitions
 $border: #ccc;
 $text-color: $black;
 $border-color: $black;
-$box-color: $fsek-orange;
-
-$main-color: $fsek-orange;
-
+$box-color: $main-color;
 
 // Unify
 $unify-red: #e74c3c;
