--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -1,16 +1,4 @@
 @font-face {
-  font-family: "diogenesregular";
-  src: asset-url("assets/diogenes-webfont.eot");
-  src: asset-url("assets/diogenes-webfont.eot?#iefix") format("embedded-opentype"),
-  asset-url("assets/diogenes-webfont.woff2") format("woff2"),
-  asset-url("assets/diogenes-webfont.woff") format("woff"),
-  asset-url("assets/diogenes-webfont.ttf") format("truetype"),
-  asset-url("assets/diogenes-webfont.svg#diogenesregular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
   font-family: "Glyphicons Halflings";
   src: asset-url("assets/glyphicons-halflings-regular.eot");
   src: asset-url("assets/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"),
@@ -19,3 +7,9 @@
   asset-url("assets/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg");
 }
 
+@font-face {
+  font-family: "LTH";
+  src: font-url("LTH.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
