--- a/app/assets/stylesheets/partials/_admin_grid.scss
+++ b/app/assets/stylesheets/partials/_admin_grid.scss
@@ -4,7 +4,7 @@
       td,
       &.even td,
       &.odd td {
-        background-color: $orange-highlight;
+        background-color: $highlight-color;
       }
     }
   }
