--- a/app/assets/stylesheets/style/header.scss
+++ b/app/assets/stylesheets/style/header.scss
@@ -62,9 +62,10 @@
   }
 
   .navbar-brand {
-    margin-top: -18px;
-    padding: 0 0 0 10px;
+    margin-right: -15px;
+    margin-top: -10px;
     position: relative;
+    vertical-align: middle;
     z-index: 2;
   }
 
