--- a/app/assets/stylesheets/style/headline.scss
+++ b/app/assets/stylesheets/style/headline.scss
@@ -9,7 +9,7 @@
   h3,
   h4,
   h5 {
-    border-bottom: 2px solid $fsek-orange;
+    border-bottom: 2px solid $main-color;
     color: $gray-headline;
     display: inline-block;
     margin: 0 0 -2px;
