--- a/app/assets/stylesheets/style/hero.scss
+++ b/app/assets/stylesheets/style/hero.scss
@@ -1,6 +1,6 @@
 .hero {
   background: $light-gray;
-  border-left: 4px solid $fsek-orange;
+  border-left: 4px solid $main-color;
   color: $dark-gray;
   font-size: 16px;
   margin: 20 0;
