--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -44,10 +44,7 @@
   </ul>
 
   <h3><%= t('about.questions') %></h3>
-  <% contact = Contact.find_by(slug: 'röstiga') %>
-  <% if contact.present? %>
-    <%= link_to(contact_path(contact), class: 'btn primary') do %>
-      <%= fa_icon('envelope-o') %>&nbsp; Röstiga
-    <% end %>
+  <%= link_to(contacts_path, class: 'btn primary') do %>
+    <%= fa_icon('envelope-o') %>&nbsp; Röstiga
   <% end %>
 </div>
