Menu: turn static

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -2,7 +2,7 @@
   <ul class="nav navbar-nav navbar-right">
     <% if current_user.present? && current_user.permissions.count > 0 %>
       <li class="dropdown">
-        <%= menu_dropdown_link(t(:administrate)) %>
+        <%= menu_dropdown_link(t('.administrate')) %>
         <ul class="dropdown-menu">
           <% if can_administrate? :modify, Vote %>
             <li>
@@ -28,10 +28,21 @@
       </li>
     <% end %>
 
-    <% cache('main_menu', skip_digest: true) do %>
-      <% global_menus = GlobalMenus.new %>
-      <%= menu_dropdown(menus: global_menus.info_menus, title: t('menu.info')) %>
-      <%= menu_dropdown(menus: global_menus.voting_menus, title: t('menu.voting')) %>
-    <% end %>
+    <li class="dropdown">
+      <%= menu_dropdown_link(t('.info')) %>
+      <ul class="dropdown-menu">
+        <li><%= link_to(t('.about'), about_path) %></li>
+        <li><%= link_to(t('.contact'), contacts_path) %></li>
+        <li><%= link_to(t('.documents'), documents_path) %></li>
+        <li><%= link_to(t('.agenda'), agendas_path) %></li>
+        <li><%= link_to(t('.terms'), terms_path) %></li>
+      </ul>
+    </li>
+    <li class="dropdown">
+      <%= menu_dropdown_link(t('.voting')) %>
+      <ul class="dropdown-menu">
+        <li><%= link_to(t('.votes'), votes_path) %></li>
+      </ul>
+    </li>
   </ul>
 </div>
