--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -1,15 +1,6 @@
 @font-face {
-  font-family: "Glyphicons Halflings";
-  src: asset-url("assets/glyphicons-halflings-regular.eot");
-  src: asset-url("assets/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"),
-  asset-url("assets/glyphicons-halflings-regular.woff") format("woff"),
-  asset-url("assets/glyphicons-halflings-regular.ttf") format("truetype"),
-  asset-url("assets/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg");
-}
-
-@font-face {
-  font-family: "LTH";
-  src: font-url("LTH.ttf") format("truetype");
-  font-weight: normal;
+  font-family: 'LTH';
   font-style: normal;
+  font-weight: normal;
+  src: font-url('LTH.ttf') format('truetype');
 }
