--- a/app/views/admin/documents/_form.html.erb
+++ b/app/views/admin/documents/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.input :title %>
   <%= f.input :category, collection: @categories, input_html: { class: 'select2-tags' },
               include_blank: false %>
-  <%= f.association :agenda, collection: Agenda.index, label_method: :to_s, include_hidden: false,
+  <%= f.association :agenda, collection: Agenda.by_index, label_method: :to_s, include_hidden: false,
                              input_html: { class: 'select2-single' }, required: false %>
   <% if @document.pdf.present? %>
     <p><%= link_to(@document.pdf_file_name, @document)%></p>
