--- a/app/views/admin/votes/_form.html.erb
+++ b/app/views/admin/votes/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for [:admin, @vote] do |f| %>
   <%= f.input :title %>
-  <%= f.association :agenda, collection: Agenda.index, label_method: :to_s  %>
+  <%= f.association :agenda, collection: Agenda.by_index, label_method: :to_s  %>
   <%= f.input :choices, as: :integer, input_html: { min: '1'} %>
   <div class="panel panel-default">
     <div class="panel-heading"><%= t('vote.options') %></div>
