--- a/app/views/users/_confirm_information.html.erb
+++ b/app/views/users/_confirm_information.html.erb
@@ -13,7 +13,7 @@
     <% else %>
       <span class="not-present">
         <%= fa_icon('times-circle-o') %>
-        <%= link_to(t('vote_user.card_number_not_present'), own_user_path) %>
+        <%= link_to(t('vote_user.card_number_not_present'), user_path) %>
       </span>
     <% end %>
   </div>
