--- a/app/views/admin/documents/index.html.erb
+++ b/app/views/admin/documents/index.html.erb
@@ -2,43 +2,41 @@
 <div class="headline">
   <h1><%= t('document.title') %></h1>
 </div>
-<div class="col-md-2 col-sm-12 cafe competition margin-bottom-20">
-  <button class="wg-external-submit-button btn primary" data-grid-name="grid">
-    <%= t('document.filter') %>
-  </button>
-
-  <button class="wg-external-reset-button btn secondary" data-grid-name="grid">
-    <%= t('document.reset_filter') %>
-  </button>
-
-  <hr>
-
+<div class="col-md-2 col-sm-12 margin-bottom-20">
   <%= link_to(t('document.new'), new_admin_document_path, class: 'btn primary') %>
   <%= link_to(t('document.index'), documents_path, class: 'btn secondary') %>
 </div>
 
-<div class="col-md-10 col-sm-12">
-  <%= grid(@documents.grid, hide_submit_button: true, hide_reset_button: true) do |g|
-    g.column(name: Document.human_attribute_name(:title), attribute: 'title') do |document|
-      link_to(document, document_path(document), target: :blank)
-    end
-    g.column(name: Document.human_attribute_name(:category), attribute: 'category',
-             custom_filter: :auto)
-    g.column(name: Document.human_attribute_name(:public), attribute: 'public') do |document|
-      yes_no(document.public)
-    end
-    g.column(name: Document.human_attribute_name(:updated_at), attribute: 'updated_at',
-             filter: false)
-    g.column name: model_name(Agenda), attribute: 'title', assoc: :agenda do |document|
-      if document.agenda.present?
-        link_to document.agenda, edit_admin_agenda_path(document.agenda)
-      end
-    end
-    g.column(name: model_name(User), assoc: :user, attribute: 'firstname') do |document|
-      user_link(document.user)
-    end
-    g.column(name: t(:edit), filter: false) do |document|
-      link_to(t('document.edit'), edit_admin_document_path(document))
-    end
-  end -%>
+<div class="col-md-10 col-sm-12 table-responsive">
+  <%= paginate(@documents) %>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th><%= Document.human_attribute_name(:title) %></th>
+        <th><%= Document.human_attribute_name(:category) %></th>
+        <th><%= Document.human_attribute_name(:public) %></th>
+        <th><%= Document.human_attribute_name(:updated_at) %></th>
+        <th><%= model_name(Agenda) %></th>
+        <th><%= model_name(User) %></th>
+        <th><%= t(:edit) %></th>
+      </tr>
+      <tbody>
+        <% @documents.each do |d| %>
+          <tr>
+            <td> <%= link_to(d, document_path(d), target: :blank) %></td>
+            <td> <%= d.category %></td>
+            <td> <%= yes_no(d.public) %></td>
+            <td> <%= l(d.updated_at) %></td>
+            <td> <%= link_to(d.agenda, edit_admin_agenda_path(d.agenda)) if d.agenda.present? %></td>
+            <td> <%= d.user %></td>
+            <td>
+              <%= link_to(fa_icon('cog', text: t(:edit)),
+                          edit_admin_document_path(d)) %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </thead>
+  </table>
+  <%= paginate(@documents) %>
 </div>
